Be more strict on codeblock responsive sizing to avoid main text being cut off horizontally

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -322,12 +322,9 @@ main {
 	}
 
 	pre {
+		max-width: 85vw;
+		overflow-x: auto;
 		font-size: 0.7em;
-
-		@media (max-width: 399.99px) {
-			width: 90vw;
-			overflow-x: scroll;
-		}
 
 		@media (min-width: 500px) and (max-width: 749.99px) {
 			font-size: 0.8em;
